# innit

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml
benches/: game_loop.rs
data/: genes
doc/: about.md  overview.md
raws/: objects.json  spawns.json
resources/art/: innit_bg.xp  main.xp  menu_background.kra  menu_bg.kra  menu_bg.kra~  menu_bg.png~  menu_bg.xp
scripts/: clippy.sh
src/: ai.rs  color_palette.rs  core.rs  entity.rs  fighter.rs  game.rs  game_io.rs  game_state.rs  gui.rs  item.rs  lib.rs  main.rs  object.rs  raws.rs  test.rs  ui.rs  util.rs  world.rs
src/core/: game_env.rs  game_objects.rs  game_state.rs  mod.rs  position.rs  world.rs
src/core/world/: mod.rs  spawn.rs  world_gen.rs  world_gen_organic.rs  world_gen_rogue.rs
src/entity/: action.rs  ai.rs  complement.rs  control.rs  dna.rs  fighter.rs  genetics.rs  inventory.rs  mod.rs  object.rs  player.rs
src/entity/act/: complement_system.rs  hereditary.rs  inventory.rs  mod.rs
src/entity/action/: hereditary.rs  inventory.rs  mod.rs
src/game/: consts.rs  env.rs  game_env.rs  game_objects.rs  game_state.rs  mod.rs  msg.rs  objects.rs  position.rs  state.rs
src/raws/: mod.rs  object_template.rs  spawn.rs  template.rs  templating.rs
src/test/: ai.rs  genetics.rs  mod.rs  position.rs
src/ui/: animation.rs  color.rs  color_palette.rs  dialog.rs  frontend.rs  game_frontend.rs  game_input.rs  gui.rs  hud.rs  input.rs  interactable.rs  menu.rs  mod.rs  old_frontend.rs  particle.rs  player.rs  rex_assets.rs
src/ui/custom/: genome_editor.rs  mod.rs
src/ui/dialog/: character.rs  controls.rs  mod.rs
src/ui/menu/: choose_action.rs  choose_action_menu.rs  credits.rs  game_over.rs  game_over_menu.rs  game_won.rs  main.rs  main_menu.rs  mod.rs
src/ui/menus/: choose_action_menu.rs  game_over_menu.rs  main_menu.rs  mod.rs
src/util/: game_rng.rs  mod.rs  random.rs  rng.rs  timer.rs
src/world/: mod.rs  world_gen_organic.rs  world_gen_rogue.rs
src/world_gen/: ca.rs  mod.rs  rogue.rs
wasm/: build.sh
