[package]
name = "innit"
version = "0.0.4"
authors = ["Michael Wagner <wagner.mchl@googlemail.com>"]
license = "MIT License"
edition = "2021"

[features]
stdweb = [ "instant/stdweb" ]
wasm-bindgen = [ "instant/wasm-bindgen" ]

[dependencies]
casim = { git = "https://github.com/micutio/casim", branch = "main" }
rltk="0.8.1"
cpuprofiler = "0.0.4"
instant = "0.1"
lazy_static = "1.4.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
rand = "0.8.3"
rand_core = "0.6.2"
rand_isaac = "0.3.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
typetag = "0.1.7"
dirs = "4.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
