[package]
name = "innit"
version = "0.0.6"
authors = ["Michael Wagner <wagner.mchl@googlemail.com>"]
license = "MIT License"
edition = "2021"
description = "A roguelike game centered around the human immune system"
repository = "https://github.com/micutio/innit"
keywords = ["game","roguelike", "biology", "immune", "system"]
categories = ["game"]

[[bin]]
name = "innit"
path = "src/main.rs"

[lib]
name = "innit"
path = "src/lib.rs"

[features]
stdweb = [ "instant/stdweb" ]
# wasm-bindgen = [ "instant/wasm-bindgen" ]

[dev-dependencies]
criterion = "0.4"

[dependencies]
casim = { git = "https://github.com/micutio/casim", branch = "main" }
bracket-lib = {git = "https://github.com/amethyst/bracket-lib", branch="master", features=["webgpu"]}
# bracket-lib = {git = "https://github.com/jasonjmcghee/bracket-lib", branch="issue_254_webgl_missing-features"} # testing

cpuprofiler = "0.0.4"
color-eyre = "0.6"
instant = "0.1"
lazy_static = "1.4"
log = "0.4"
pretty_env_logger = "0.4"
rand = "0.8"
rand_core = "0.6"
rand_isaac = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
typetag = "0.2"
dirs = "5.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
